# RAG

./: LICENSE  README.md  analyze_swebench.py  download_benchmarks.sh  download_repos.py  run_pipeline.sh  run_repobench.sh  setup_local.sh  setup_server.sh  start_vllm.sh
CodeRAG/: LICENSE  README.md  pyproject.toml  pyrightconfig.json
CodeRAG/HumanEvaluation/: stu1.json  stu2.json  stu3.json
CodeRAG/benchmark/cceval/: test_indices.json  train_indices.json
CodeRAG/benchmark/recceval/: test_indices.json  train_indices.json
CodeRAG/coderag/: config.py
CodeRAG/coderag/benchmark/: __init__.py  cceval.py  common.py  methods.py  recceval.py
CodeRAG/coderag/build_prompt/: merge_retrieval.py  split_retrieval.py
CodeRAG/coderag/build_query/: build_query.py
CodeRAG/coderag/evaluation/: metrics.py
CodeRAG/coderag/inference/: limited_async_openai.py  tgi.py
CodeRAG/coderag/rerank/: __init__.py  common.py  listwiselikelihood.py  local_ranker.py  prompt.py  rerank_llm.py
CodeRAG/coderag/rerank/comparator/: common.py  local_setwise_logits.py  openai_listwise.py  vllm_setvise_logits.py
CodeRAG/coderag/rerank/sorter/: bubble.py  heap.py
CodeRAG/coderag/retrieve/: common.py  dataflow_retrieve.py  dense_retrieve.py  methods.py  sparse_retrieve.py
CodeRAG/coderag/static_analysis/: __init__.py  common.py  parse_repo_v2.py
CodeRAG/config/: config.toml  config_server.toml
CodeRAG/scripts/: build_prompt.py  build_query.py  evaluation.py  generate_rerank_supervise_data.py  human_eval.py  inference.py  merge_peft_model.py  rerank.py  retrieve.py  sft_train.py
(+11 files in other folders)
